*Thu Jun  7 2012 Henri Gavin <.> 0.20100105
- frame3dd_io.c :  set tickslevel 0 to bring orgin of z axis to x-y plane

*Wed May 30 2012 Henri Gavin <.> 0.20100105
- user-manual.html and README-win32.txt - windows installaion - add recommendation for ansicon.
- fresh build of Frame3DD for linux, OS X, and Win32

*Mon May 28 2012 Henri Gavin <.> 0.20100105
- bug fix : allowable number of of interioir point forces, nP, is ten times the
number of frame elements, nE.    The input data error message was triggered if
nP > nE.   It has been changed to check if nP > 10*nE.   
updated : frame3dd_io.c  and  user-manual.html
(Thanks to Humberto Hassey.)

*Mon Apr 09 2012 Henri Gavin <.> 0.20100105
- change of terminology: "joint" to "node" throughout documentation and code

*Mon Apr 09 2012 Henri Gavin <.> 0.20100105
- frame3dd_io.c ... fix spelling of "C O N C E N T R A T E D"

*Fri Apr 06 2012 Henri Gavin <.> 0.20100105
- frame3dd_io.c ... in function animate, prevent overflow from excessive EXG factor

*Sun Jan 01 2012 Henri Gavin <.> 0.20100105
- user-manual.html - add link to the vim charity, iccf-holland 

*Sun Jan 01 2012 Henri Gavin <.> 0.20100105
- source-code re-organization, moved matrix multiplication routines from eig.c to matrix.c

*Thu Dec 30 2011 Henri Gavin <.> 0.20100105
- source-code re-organization, new matrix.c, matrix.h contains lu_dcmp, ldl_dcmp, pseudo-inverse, and other matrix math functions 

*Wed Dec 21 2011 Henri Gavin <.> 0.20100105
- user-manual.html - Add acknowledgment section, small edit to 7.4.2 shear effects.  

*Thu Nov 17 2011 Henri Gavin <.> 0.20100105
- user-manual.html - gnuplot link for Win32 to the 4.2.6 version ... the 4.4.4 version seems to have trouble.    

*Fri Nov 11 2011 Henri Gavin <.> 0.20100105
- user-manual.html - improved installation instructions

*Wed Nov 9 2011 Henri Gavin <.> 0.20100105
- user-manual.html - update suggested text editors and links

*Tue Nov 8 2011 Henri Gavin <.> 0.20100105