@@ -506,6 +506,8 @@ The following instructions install Frame3DD to the <b>Desktop</b> but other dire
 Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_osx.zip) and save it in your <b>Desktop</b>.<br>
 If the .ZIP archive was not automatically unzipped, 
 simply drag the <b>Frame3DD</b> folder icon to your <b>Desktop</b>. 
+<li><b><i>Optional</i></b><br>
+ Download the <b>Google Sketchup</b> interface for <b>Frame3DD</b>, now available <a href="http://rhin.crai.archi.fr/rld/plugin_details.php?id=1008">here</a>.
 <li><b><i>Recommended</i></b><br>
 Put the <b>Frame3DD</b> directory in your path and set the <b>FRAME3DD_OUTDIR</b> location.<br>
 <ul>
@@ -678,6 +680,8 @@ The following instructions install Frame3DD to the <b>Desktop</b> but other dire
 Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_win32.zip) and save it to your <b>Desktop</b>.<br>
 If the .ZIP archive was not automatically unzipped, 
 simply drag <b>Frame3DD</b> folder icon to your <b>Desktop</b>. 
+<li><b><i>Optional</i></b><br>
+ Download the <b>Google Sketchup</b> interface for <b>Frame3DD</b>, now available <a href="http://rhin.crai.archi.fr/rld/plugin_details.php?id=1008">here</a>.
 <li> <b><i>Recommended</i></b><br>
 Put the <b>Frame3DD</b> directory in your path and set the 
 <b>PATH</b> and <b>FRAME3DD_OUTDIR</b> environment variables.<br>
@@ -2802,6 +2806,7 @@ Exit code values have the following meanings:
 <ul>
 <li>       A GPL'able GUI<br>
 <ul>
+ <li> A <b>Google Sketchup</b> interface for <b>Frame3DD</b> is now available <a href="http://rhin.crai.archi.fr/rld/plugin_details.php?id=1008">here</a>. (July 2012)
  <li> <b>FrameEd</b> is a Windows GUI for the 20020103 version of <b>Frame3DD</b> (Jan 3, 2002).
  (<a href="#FrameEd">See above</a>.)
  <li> Work has been done on a <a href="http://www.trolltech.com/products/qt">Qt</a> GUI (Fall 2004)<br>
